@@ -1,3 +1,7 @@
+2014-12-22  Kubo Takehiro  <kubo@jiubao.org>
+	* ext/oci8/extconf.rb, ext/oci8/stmt.c: Don't use SYM2ID on ruby 2.2.0
+	    or later. Symbols passed to SYM2ID are not GC'ed.
+
 2014-12-21  Kubo Takehiro  <kubo@jiubao.org>
 	* ext/oci8/bind.c, ext/oci8/object.c, ext/oci8/oci8.h, ext/oci8/oci8lib.c,
 	  ext/oci8/ocidatetime.c, ext/oci8/ocihandle.c, ext/oci8/ocinumber.c:
